--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="NyAI Saathi is an AI-powered legal
+      research assistant designed to improve the efficiency and precision of the retrieval of legal information. Using retrieval-augmented generation (RAG) and
+      vector-based semantic search to provide users, such as lawyers, law students,
+      researchers and other legal professionals, with contextually accurate legal answers, along with references to
+      authoritative legal documents"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NyAI Saathi : AI powered legal research assistant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
