moved favicon to public

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
       researchers and other legal professionals, with contextually accurate legal answers, along with references to
       authoritative legal documents"
     />
+    
+    <!-- Open Graph / Social Media sharing tags -->
+    <meta property="og:title" content="NyAI Saathi : AI powered legal research assistant" />
+    <meta property="og:description" content="AI-powered legal research assistant with RAG and semantic search for legal professionals" />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/og-image.png" />
+    <meta property="og:url" content="https://nyaisaathi.tech" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    
     <!-- Update apple touch icon path if you have it -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png" />
     <!--
